cluster/apps/home-system/hyperion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hyperion
  labels:
    app: hyperion
    hajimari.io/enable: "true"
    hajimari.io/icon: "television"
spec:
  selector:
    app: hyperion
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: http
  type: ClusterIP
